2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in:
	* bonobo/Makefile.am:
	* libseahorse/Makefile.am:
	* plugins/gedit/Makefile.am:
	* plugins/nautilus-ext/Makefile.am: Fixes to build under 
	the cygwin platform. Patch from yselkowitz@users.sourceforge.net
	(bug #318590)
	* agent/Makefile.am: Be able to install in an alternat $DESTIR
	(bug #318070)
	
2005-10-06  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Allow any GPGME 1.x.x
	
2005-10-06  Nate Nielsen  <nielsen@memberwebs.com>

	* Version 0.8
	* AUTHORS:
	* HACKING:
	* INSTALL:
	* NEWS:
	* README:
	* README.cvs:
	* TODO: Updated for stable release
	* configure.in: Updated version to 0.8.1
	
2005-10-04  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-09-19  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Now works with gedit 2.12. Patch from 
	Mike Gardiner. (bug #316607)
	
2005-08-26  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-io.c: Fixed crasher when used
    with GPG 1.4.2 (bug# 313329)

2005-08-25  Nate Nielsen  <nielsen@memberwebs.com>
  
    * libseahorse/seahorse-gpg-options.c: Fixed crasher in 
    gpg.conf code. (bug# 314481)
    
2005-08-15  Nate Nielsen  <nielsen@memberwebs.com>

    * plugns/nautilus-ext/seahorse-nautilus.c: Fixed nautilus crasher 
    (bug #312174)

2005-08-14  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c: Updated credits
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-ldap-source.c: Add extra lines between keys 
    retrieved from keyservers.
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-kCommand line utility for checking questionnaires in a period.ey.h: Fix constness gcc 4.0 warnings.
    * libseahorse/seahorse-widget.c: Fix complaints when closing
    * src/seahorse-keyserver-results.ui: Fix menu warning
    * src/seahorse-key-manager.c: 
    * src/seahorse-keyserver-results.c: Fix tree warnings