@@ -9,6 +9,8 @@
 	(bug #318590)
 	* agent/Makefile.am: Be able to install in an alternat $DESTIR
 	(bug #318070)
+	* libseahorse/seahorse-util.c: Don't display error for cancelled.
+	operations (bug #318257)
 	
 2005-10-06  Nate Nielsen  <nielsen@memberwebs.com>
 
